deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-cicd-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-cicd-app
  template:
    metadata:
      labels:
        app: my-cicd-app
    spec:
      containers:
        - name: nginx
          image: my-cicd-app:latest
          ports:
            - containerPort: 8080
