service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-cicd-app
spec:
  selector:
    app: my-cicd-app
  ports:
    - port: 80
      targetPort: 8080
