route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: my-cicd-app
spec:
  to:
    kind: Service
    name: my-cicd-app
  port:
    targetPort: 80
